Rename players to users. Add better auth sync with firebase to db
